increase dz-common version and remove StringUtils usage